trunk/lancom/plt_project/chitra_lancom_2/BlockParser.java
// $ANTLR 3.0.1 /home/sambuddho/plt_project/chitra_lancom_2/Block.g 2008-04-22 01:36:00

	//import javalancom.Scope;
	//import javalancom.Symbol;
	import java.util.HashMap;
	import java.util.Set;
	import java.util.Iterator;
	import java.util.Map;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
public class BlockParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "DIV", "NUMBER", "NM", "STRING", "ID", "COMMA", "CHAR", "ICMP_MESSAGE_TYPE", "DOT", "LETTER", "DIGIT", "EscapeSequence", "LINE_COMMENT", "EQUAL", "WHITESPACE", "'prog'", "'endprog'", "';'", "'if'", "'('", "')'", "'else'", "'endif'", "'while'", "'endwhile'", "'echo'", "'?'", "':'", "'||'", "'&&'", "'|'", "'&'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'~'", "'*='", "'/='", "'+='", "'-='", "'topology_type_t'", "'host_type_t'", "'host_group_type_t'", "'serv_group_type_t'", "'role_type_t'", "'policy_type_t'", "'route_type_t'", "'interface_type_t'", "'ipaddr_t'", "'int_type_t'", "'char_type_t'", "'inbound'", "'outbound'", "'allow'", "'deny'", "'udp'", "'tcp'", "'ifname'", "'card_id'", "'netmask'", "'host_group'", "'{'", "'}'", "'DNS'", "'GATEWAY'", "'dns'", "'gateway'", "'host'", "'gw'", "'net'", "'service_set'"
    };
    public static final int LINE_COMMENT=19;
    public static final int LETTER=16;
    public static final int NUMBER=8;
    public static final int CHAR=13;
    public static final int WHITESPACE=21;
    public static final int MULT=6;
    public static final int MINUS=5;
    public static final int ID=11;
    public static final int EOF=-1;
    public static final int COMMA=12;
    public static final int EQUAL=20;
    public static final int PLUS=4;
    public static final int DIGIT=17;
    public static final int DIV=7;
    public static final int NM=9;
    public static final int DOT=15;
    public static final int EscapeSequence=18;
    public static final int ICMP_MESSAGE_TYPE=14;
    public static final int STRING=10;
    public static final String[] ruleNames = new String[] {
        "invalidRule", "prog", "statement_list", "statement", "statement_expr", 
        "condition_statement", "iteration_statement", "print_statement", 
        "expression", "assignment_expr", "conditional_expr", "logicalOR_expr", 
        "logicalAND_expr", "bitwiseOR_expr", "bitwiseAND_expr", "equality_expr", 
        "relational_expr", "expr", "term", "unary_expr", "postfix_expression", 
        "assignment_operator", "factor", "literal", "declr_stmt", "object_values", 
        "type_name", "role", "policy", "topology", "int_value", "char_value", 
        "direction", "verdict", "proto", "icmp_cntrl_message", "port", "object_name", 
        "interface_name", "ip_addr", "nmask", "host", "host_set", "dns_set", 
        "gateway", "host_group", "interface", "route", "serv_descr", "serv_group", 
        "serv_listen_port", "host_name"
    };

    public int ruleLevel = 0;
    public BlockParser(TokenStream input, int port) {
            super(input, port);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }

    }
    public BlockParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT);
    }
    public BlockParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);
    }

    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/sambuddho/plt_project/chitra_lancom_2/Block.g"; }


    	Scope globalScope = new Scope(null);
    	Scope currentScope = globalScope;
    	Map<String, Assignment> map = new HashMap<String, Assignment>(); 

        	public static void main(String[] args) throws Exception 
        	{
            	BlockLexer lex = new BlockLexer(new ANTLRFileStream(args[0]));
    	       	CommonTokenStream tokens = new CommonTokenStream(lex);

            	BlockParser parser = new BlockParser(tokens);

    	        try 
    	        {
    	            parser.role();
            	} 
            	catch (RecognitionException e)  
            	{
    	            e.printStackTrace();
            	}
        	}



    // $ANTLR start prog
    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:45:1: prog : 'prog' ( statement_list )+ 'endprog' ;
    public final void prog() throws RecognitionException {
        try { dbg.enterRule("prog");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(45, 1);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:46:2: ( 'prog' ( statement_list )+ 'endprog' )
            dbg.enterAlt(1);

            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:46:4: 'prog' ( statement_list )+ 'endprog'
            {
            dbg.location(46,4);
            match(input,22,FOLLOW_22_in_prog80); 
            dbg.location(46,11);
            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:46:11: ( statement_list )+
            int cnt1=0;
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==NUMBER||(LA1_0>=STRING && LA1_0<=ID)||LA1_0==CHAR||(LA1_0>=24 && LA1_0<=26)||LA1_0==30||LA1_0==32||LA1_0==45||(LA1_0>=50 && LA1_0<=62)||LA1_0==67||LA1_0==70||LA1_0==77||(LA1_0>=79 && LA1_0<=80)) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:46:11: statement_list
            	    {
            	    dbg.location(46,11);
            	    pushFollow(FOLLOW_statement_list_in_prog82);
            	    statement_list();
            	    _fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt1++;
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(46,27);
            match(input,23,FOLLOW_23_in_prog85); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(47, 3);

        }
        finally {
            dbg.exitRule("prog");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end prog


    // $ANTLR start statement_list
    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:49:2: statement_list : ( statement | declr_stmt );
    public final void statement_list() throws RecognitionException {
        try { dbg.enterRule("statement_list");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(49, 2);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:50:3: ( statement | declr_stmt )
            int alt2=2;
            try { dbg.enterDecision(2);

            int LA2_0 = input.LA(1);

            if ( (LA2_0==NUMBER||(LA2_0>=STRING && LA2_0<=ID)||LA2_0==CHAR||(LA2_0>=24 && LA2_0<=26)||LA2_0==30||LA2_0==32||LA2_0==45||(LA2_0>=61 && LA2_0<=62)||LA2_0==67||LA2_0==70||LA2_0==77||(LA2_0>=79 && LA2_0<=80)) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=50 && LA2_0<=60)) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("49:2: statement_list : ( statement | declr_stmt );", 2, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:50:5: statement
                    {
                    dbg.location(50,5);
                    pushFollow(FOLLOW_statement_in_statement_list102);
                    statement();
                    _fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:51:6: declr_stmt
                    {
                    dbg.location(51,6);
                    pushFollow(FOLLOW_declr_stmt_in_statement_list109);
                    declr_stmt();
                    _fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(52, 3);

        }
        finally {
            dbg.exitRule("statement_list");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end statement_list


    // $ANTLR start statement
    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:54:2: statement : ( condition_statement | iteration_statement | statement_expr | print_statement );
    public final void statement() throws RecognitionException {
        try { dbg.enterRule("statement");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(54, 2);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:55:3: ( condition_statement | iteration_statement | statement_expr | print_statement )
            int alt3=4;
            try { dbg.enterDecision(3);

            switch ( input.LA(1) ) {
            case 25:
                {
                alt3=1;
                }
                break;
            case 30:
                {
                alt3=2;
                }
                break;
            case NUMBER:
            case STRING:
            case ID:
            case CHAR:
            case 24:
            case 26:
            case 45:
            case 61:
            case 62:
            case 67:
            case 70:
            case 77:
            case 79:
            case 80:
                {
                alt3=3;
                }
                break;
            case 32:
                {
                alt3=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("54:2: statement : ( condition_statement | iteration_statement | statement_expr | print_statement );", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:55:5: condition_statement
                    {
                    dbg.location(55,5);
                    pushFollow(FOLLOW_condition_statement_in_statement124);
                    condition_statement();
                    _fsp--;


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:56:5: iteration_statement
                    {
                    dbg.location(56,5);
                    pushFollow(FOLLOW_iteration_statement_in_statement130);
                    iteration_statement();
                    _fsp--;


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:57:5: statement_expr
                    {
                    dbg.location(57,5);
                    pushFollow(FOLLOW_statement_expr_in_statement136);
                    statement_expr();
                    _fsp--;


                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:58:5: print_statement
                    {
                    dbg.location(58,5);
                    pushFollow(FOLLOW_print_statement_in_statement142);
                    print_statement();
                    _fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(59, 3);

        }
        finally {
            dbg.exitRule("statement");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end statement


    // $ANTLR start statement_expr
    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:61:2: statement_expr : ( ';' | expression ';' );
    public final void statement_expr() throws RecognitionException {
        try { dbg.enterRule("statement_expr");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(61, 2);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:62:3: ( ';' | expression ';' )
            int alt4=2;
            try { dbg.enterDecision(4);

            int LA4_0 = input.LA(1);

            if ( (LA4_0==24) ) {
                alt4=1;
            }
            else if ( (LA4_0==NUMBER||(LA4_0>=STRING && LA4_0<=ID)||LA4_0==CHAR||LA4_0==26||LA4_0==45||(LA4_0>=61 && LA4_0<=62)||LA4_0==67||LA4_0==70||LA4_0==77||(LA4_0>=79 && LA4_0<=80)) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("61:2: statement_expr : ( ';' | expression ';' );", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:62:5: ';'
                    {
                    dbg.location(62,5);
                    match(input,24,FOLLOW_24_in_statement_expr158); 

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:63:5: expression ';'
                    {
                    dbg.location(63,5);
                    pushFollow(FOLLOW_expression_in_statement_expr164);
                    expression();
                    _fsp--;

                    dbg.location(63,16);
                    match(input,24,FOLLOW_24_in_statement_expr166); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(64, 3);

        }
        finally {
            dbg.exitRule("statement_expr");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end statement_expr


    // $ANTLR start condition_statement
    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:68:2: condition_statement : 'if' '(' equality_expr ')' statement_list ( 'else' statement_list )? 'endif' ;
    public final void condition_statement() throws RecognitionException {
        try { dbg.enterRule("condition_statement");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(68, 2);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:69:3: ( 'if' '(' equality_expr ')' statement_list ( 'else' statement_list )? 'endif' )
            dbg.enterAlt(1);

            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:69:5: 'if' '(' equality_expr ')' statement_list ( 'else' statement_list )? 'endif'
            {
            dbg.location(69,5);
            match(input,25,FOLLOW_25_in_condition_statement184); 
            dbg.location(69,10);
            match(input,26,FOLLOW_26_in_condition_statement186); 
            dbg.location(69,14);
            pushFollow(FOLLOW_equality_expr_in_condition_statement188);
            equality_expr();
            _fsp--;

            dbg.location(69,28);
            match(input,27,FOLLOW_27_in_condition_statement190); 
            dbg.location(69,32);
            pushFollow(FOLLOW_statement_list_in_condition_statement192);
            statement_list();
            _fsp--;

            dbg.location(69,47);
            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:69:47: ( 'else' statement_list )?
            int alt5=2;
            try { dbg.enterSubRule(5);
            try { dbg.enterDecision(5);

            int LA5_0 = input.LA(1);

            if ( (LA5_0==28) ) {
                alt5=1;
            }
            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:69:48: 'else' statement_list
                    {
                    dbg.location(69,48);
                    match(input,28,FOLLOW_28_in_condition_statement195); 
                    dbg.location(69,55);
                    pushFollow(FOLLOW_statement_list_in_condition_statement197);
                    statement_list();
                    _fsp--;


                    }
                    break;

            }
            } finally {dbg.exitSubRule(5);}

            dbg.location(69,72);
            match(input,29,FOLLOW_29_in_condition_statement201); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(70, 3);

        }
        finally {
            dbg.exitRule("condition_statement");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end condition_statement


    // $ANTLR start iteration_statement
    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:72:2: iteration_statement : 'while' '(' equality_expr ')' statement_list 'endwhile' ;
    public final void iteration_statement() throws RecognitionException {
        try { dbg.enterRule("iteration_statement");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(72, 2);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:73:3: ( 'while' '(' equality_expr ')' statement_list 'endwhile' )
            dbg.enterAlt(1);

            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:73:5: 'while' '(' equality_expr ')' statement_list 'endwhile'
            {
            dbg.location(73,5);
            match(input,30,FOLLOW_30_in_iteration_statement217); 
            dbg.location(73,13);
            match(input,26,FOLLOW_26_in_iteration_statement219); 
            dbg.location(73,17);
            pushFollow(FOLLOW_equality_expr_in_iteration_statement221);
            equality_expr();
            _fsp--;

            dbg.location(73,31);
            match(input,27,FOLLOW_27_in_iteration_statement223); 
            dbg.location(73,35);
            pushFollow(FOLLOW_statement_list_in_iteration_statement225);
            statement_list();
            _fsp--;

            dbg.location(73,50);
            match(input,31,FOLLOW_31_in_iteration_statement227); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(74, 3);

        }
        finally {
            dbg.exitRule("iteration_statement");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end iteration_statement


    // $ANTLR start print_statement
    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:76:2: print_statement : 'echo' STRING ';' ;
    public final void print_statement() throws RecognitionException {
        Token STRING1=null;

        try { dbg.enterRule("print_statement");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(76, 2);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:77:3: ( 'echo' STRING ';' )
            dbg.enterAlt(1);

            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:77:5: 'echo' STRING ';'
            {
            dbg.location(77,5);
            match(input,32,FOLLOW_32_in_print_statement243); 
            dbg.location(77,12);
            STRING1=(Token)input.LT(1);
            match(input,STRING,FOLLOW_STRING_in_print_statement245); 
            dbg.location(77,20);
            System.out.println(STRING1);
            dbg.location(77,50);
            match(input,24,FOLLOW_24_in_print_statement249); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(78, 3);

        }
        finally {
            dbg.exitRule("print_statement");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end print_statement


    // $ANTLR start expression
    // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:80:2: expression : assignment_expr ;
    public final void expression() throws RecognitionException {
        try { dbg.enterRule("expression");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(80, 2);

        try {
            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:81:3: ( assignment_expr )
            dbg.enterAlt(1);

            // /home/sambuddho/plt_project/chitra_lancom_2/Block.g:81:5: assignment_expr
            {
            dbg.location(81,5);
            pushFollow(FOLLOW_assignment_expr_in_expression265);
            assignment_expr();
            _fsp--;


            }
